fixed spacing of top elements

--- a/style.css
+++ b/style.css
@@ -16,12 +16,20 @@ li {
 }
 
 .top {
-  height: 100px;
   padding: 30px;
   color:white;
+  display:inline;
 }
-.top a{
+.top a {
   color: white;
+}
+
+#timer {
+  margin-right:30px;
+}
+
+.top a {
+  margin-left: 30px;
 }
 
 @supports (-webkit-text-stroke: 1px black) {
@@ -33,6 +41,7 @@ li {
 
 .container {
   margin: 0 auto;
+  margin-top: 80px;
   border:4px solid purple;
   border-radius:10px;
   padding: 30px;
@@ -50,6 +59,7 @@ li {
 #quiz button {
   display: block;
   font-size:22px;
+  margin-top:5px;
 }
 button {
   color: white;
